# hoofprint

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  biome.json  justfile
.github/: CONTRIBUTING.md
.github/workflows/: build_container.yml
assets/: logo.acorn
src/: cli.rs  config.rs  constants.rs  error.rs  lib.rs  logging.rs  main.rs  password.rs  prelude.rs
src/db/: mod.rs
src/db/entities/: code.rs  mod.rs  site.rs  user.rs
src/db/migrations/: m20251220_01.rs  m20251222_01_default_admin.rs  m20251222_02_default_site.rs  m20251222_03_add_code_name.rs  m20251224_01_username_to_email.rs  mod.rs
src/tests/: codes.rs  mod.rs
src/web/: admin.rs  auth.rs  forms.rs  logging.rs  manifest.rs  mod.rs  registration.rs  routes.rs  sessions.rs  state.rs  views.rs
src/web/middleware/: admin.rs  headers.rs  logging.rs  mod.rs
static/: JsBarcode.all.min.js.br  edit_form.js  qrcode.min.js.br  scan.js  styles.css  view.js  view.js.br
static/zbar-wasm/: index.mjs  index.mjs.map
templates/: admin_dashboard.html  admin_password_reset_confirm.html  admin_password_reset_page.html  base_template.html  create_code.html  edit_code.html  index.html  login_form.html  register.html  scan.html  view_code.html
