[package]
name = "hoofprint"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
askama = "0.15.1"
askama_web = { version = "0.15.0", features = ["axum-0.8"] }
async-trait = "0.1"
axum = { version = "0.8.8", features = ["tokio", "macros"] }
axum-server = { version = "0.8.0", features = [
    "tokio-rustls",
    "rustls",
    "rustls-pki-types",
    "tls-rustls",
] }
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
fern = "0.7.1"
humantime = "2.3.0"
log = "0.4.29"
rand = "0.9.2"
rustls = { version = "0.23.35", features = ["aws-lc-rs", "zlib"] }
sea-orm = { version = "1.1.19", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "1.1.19", features = [
    "with-time",
    "with-uuid",
    "with-json",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.48.0", features = ["full", "tracing"] }
tower-http = { version = "0.6.8", features = [
    "fs",
    "trace",
    "compression-br",
    "compression-gzip",
    "compression-deflate",
] }
tower-sessions = { version = "0.14.0" }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = { version = "0.1.44", features = ["log", "release_max_level_debug"] }
url = "2.5.7"
uuid = { version = "1.19.0", features = ["v7"] }
