[package]
name = "hoofprint"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
askama = "0.16.0"
askama_web = { version = "0.16.0", features = ["axum-0.8"] }
async-trait = "0.1"
axum = { version = "0.8.9", features = ["tokio", "macros"] }
axum-server = { version = "0.8.0", features = [
    "tokio-rustls",
    "rustls",
    "rustls-pki-types",
    "tls-rustls",
] }
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
fern = "0.7.1"
humantime = "2.3.0"
log = "0.4.29"
rand = "0.10.1"
rustls = { version = "0.23.40", features = ["aws-lc-rs", "zlib"] }
sea-orm = { version = "1.1.20", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
sea-orm-migration = { version = "1.1.20", features = [
    "with-time",
    "with-uuid",
    "with-json",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
secret-string = { version = "0.0.2", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tower-http = { version = "0.6.10", features = [
    "fs",
    "trace",
    "compression-br",
    "compression-gzip",
    "compression-deflate",
] }
tower-sessions = { version = "0.14.0" }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = { version = "0.1.44", features = ["log", "release_max_level_debug"] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v7"] }

[dev-dependencies]
axum-test = "18.7.0"
